Text dragging can scroll overflow:hidden boxes

DRQS 42789626
https://bugs.webkit.org/show_bug.cgi?id=119760
Patch by: Antonio Gomes <tonikitoo@webkit.org>

This is the patch from attachment 208832 in the above-mentioned bug.